test/tests/stages/1_int_constants/invalid_parse/unclosed_paren.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[8]:
  int
  identifier(main)
  (
  {
  return
  const int(0)
  ;
  }
